--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
